after pull and merge

--- a/package.json
+++ b/package.json
@@ -4,18 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-<<<<<<< HEAD
     "test": "echo \"Error: no test specified\" && exit 1",
     "start" : "NODE_ENV=production node server.js",
     "dev" : "NODE_ENV=dev node server.js"
-=======
-    "test": "echo \"Error: no test specified\" && exit 1"
->>>>>>> origin/main
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "depecommndencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
